Navegación sin sesión iniciada y template general

--- a/WebContent/templates/template-general.xhtml
+++ b/WebContent/templates/template-general.xhtml
@@ -8,10 +8,12 @@
 
 <f:view locale="#{settings.locale}">
 	<h:head>
-		
+		<title>ShareMyTrip - <ui:insert name="titulo"/></title>
 	</h:head>
 	<h:body>
-
+		<ui:insert name="navegacion"/>	
+		<ui:insert name="cuerpo"/>
 	</h:body>
 </f:view>
+
 </html>
